--- a/Desktop/ICS4UO_ISP/WarLens/src/companyLogo.fxml
+++ b/Desktop/ICS4UO_ISP/WarLens/src/companyLogo.fxml
@@ -5,50 +5,52 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.RadialGradient?>
 <?import javafx.scene.paint.Stop?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Arc?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="271.0" fitWidth="298.0" layoutX="157.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="277.0" fitWidth="288.0" layoutX="350.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5" scaleZ="1.5">
          <image>
-            <Image url="@../../../../../../Downloads/Company%20Contract.png" />
+            <Image url="@Company%20Logo.png" />
          </image>
       </ImageView>
-      <Text layoutX="65.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ceasefire Games Presents">
+      <Text layoutX="125.0" layoutY="563.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ceasefire Games Presents">
          <font>
-            <Font name="Rockwell Bold" size="36.0" />
+            <Font name="Rockwell Bold" size="58.0" />
          </font>
       </Text>
-      <Line endX="446.017578125" endY="5.0" layoutX="87.0" layoutY="347.0" startX="-22.0" startY="5.0" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="3.0">
-         <effect>
-            <Glow />
-         </effect>
+      <Arc fill="#ffffff0e" layoutX="496.0" layoutY="254.0" length="360.0" radiusX="153.0" radiusY="147.0" scaleX="1.5" scaleY="1.5" scaleZ="1.5" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeMiterLimit="0.0" strokeWidth="8.0">
          <stroke>
-            <LinearGradient endX="0.7097792038782162" endY="1.0" startX="0.3343848572920549" startY="1.0">
+            <RadialGradient centerX="0.721402161235739" centerY="0.6088327955372326" cycleMethod="REPEAT" focusAngle="139.01" focusDistance="-0.5190839985854754" radius="1.0">
                <stops>
                   <Stop>
                      <color>
-                        <Color red="1.0" green="0.1913580298423767" blue="0.1913580298423767" />
+                        <Color red="0.9035087823867798" green="0.02509746514260769" blue="0.02509746514260769" />
                      </color>
                   </Stop>
-                  <Stop offset="0.006711409395973154">
+                  <Stop offset="0.9798657718120806">
                      <color>
-                        <Color red="1.0" green="0.1913580298423767" blue="0.1913580298423767" />
+                        <Color red="0.22160494327545166" green="0.6666666865348816" blue="0.03086419776082039" />
                      </color>
                   </Stop>
                   <Stop offset="1.0">
                      <color>
-                        <Color red="0.17000000178813934" green="0.42619433999061584" blue="1.0" />
+                        <Color red="0.22160494327545166" green="0.6666666865348816" blue="0.03086419776082039" />
                      </color>
                   </Stop>
                </stops>
-            </LinearGradient>
+            </RadialGradient>
          </stroke>
-      </Line>
+      </Arc>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff1f1f00" height="80.0" layoutX="85.0" layoutY="503.0" stroke="LAVENDER" strokeType="INSIDE" strokeWidth="8.0" style="-fx-arc-height: 20; -fx-arc-width: 20;" width="830.0">
+         <effect>
+            <Glow />
+         </effect>
+      </Rectangle>
    </children>
 </AnchorPane>
