--- a/Desktop/ICS4UO_ISP/WarLens/src/companyLogo.fxml
+++ b/Desktop/ICS4UO_ISP/WarLens/src/companyLogo.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.Glow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,23 +7,15 @@
 <?import javafx.scene.paint.RadialGradient?>
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Arc?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #EEE;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="277.0" fitWidth="288.0" layoutX="350.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5" scaleZ="1.5">
+      <ImageView fitHeight="277.0" fitWidth="288.0" layoutX="355.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Company%20Logo.png" />
          </image>
       </ImageView>
-      <Text layoutX="125.0" layoutY="563.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ceasefire Games Presents">
-         <font>
-            <Font name="Rockwell Bold" size="58.0" />
-         </font>
-      </Text>
-      <Arc fill="#ffffff0e" layoutX="496.0" layoutY="254.0" length="360.0" radiusX="153.0" radiusY="147.0" scaleX="1.5" scaleY="1.5" scaleZ="1.5" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeMiterLimit="0.0" strokeWidth="8.0">
+      <Arc fill="#ffffff0e" layoutX="499.0" layoutY="213.0" length="360.0" radiusX="152.0" radiusY="148.0" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeMiterLimit="0.0" strokeWidth="8.0">
          <stroke>
             <RadialGradient centerX="0.721402161235739" centerY="0.6088327955372326" cycleMethod="REPEAT" focusAngle="139.01" focusDistance="-0.5190839985854754" radius="1.0">
                <stops>
@@ -47,10 +38,14 @@
             </RadialGradient>
          </stroke>
       </Arc>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff1f1f00" height="80.0" layoutX="85.0" layoutY="503.0" stroke="LAVENDER" strokeType="INSIDE" strokeWidth="8.0" style="-fx-arc-height: 20; -fx-arc-width: 20;" width="830.0">
-         <effect>
-            <Glow />
-         </effect>
-      </Rectangle>
+      <ImageView fitHeight="89.0" fitWidth="241.0" layoutX="393.0" layoutY="460.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@JavaFX_Logo.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="305.0" fitWidth="464.0" layoutX="268.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@textwrapimg.png" />
+         </image></ImageView>
    </children>
 </AnchorPane>
